# Deployment-v2

./: README.markdown  deploy.sh  stop.sh
Backend_v2/: .env  Dockerfile  docker-compose.yml
LLM-Health-Service/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
LLM-Health-Service/src/: main.py
PR-Chatbot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PR-Chatbot/src/: main.py  workflow.py
PR-Chatbot/src/agents/: assistant_agent.py  receptionist_agent.py
PR-Chatbot/src/api/: endpoints.py  schemas.py
PR-Chatbot/src/models/: comment_state.py  receptionist_response.py  workflow_state.py
PR-Chatbot/src/prompts/: assistant_prompt.py  receptionist_prompt.py
PR-Chatbot/src/utils/: parser.py  token_usage.py
PR-Chatbot/test/: chat.py  test_request.json
PR-Reviewer/: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
PR-Reviewer/src/: main.py  workflow.py
PR-Reviewer/test/: request.json  request_auto.json  review.py  review_auto.py
Webhook/: .env  Dockerfile  docker-compose.yml  go.mod  go.sum
code-review-platform/: Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
code-review-platform/app/: layout.tsx  page.tsx
code-review-platform/components/: AssignmentDialog.tsx  AssignmentList.tsx
code-review-platform/hooks/: use-auth.ts  use-course-detail.ts  use-courses.ts  use-pull-requests.ts  use-users.ts
code-review-platform/lib/: axios.ts  utils.ts
code-review-platform/services/: assignment.service.ts  auth.service.ts  (+4 more)
(+162 files in other folders)
